# notflixbot

./: .flake8  .gitignore  Dockerfile  LICENSE.txt  README.md  config-sample.json  pyproject.toml  webhook_examples.md
notflixbot/: __init__.py  config.py  emojis.py  errors.py  healthcheck.py  main.py  matrix.py  notflix.py  notflixbot.py  webhook.py  youtube.py
tests/: test_config.py  test_notflixbot.py
