[tool.poetry]
name = "notflixbot"
version = "0.1.10"
description = ""
authors = ["Benedikt Kristinsson <benedikt@lokun.is>"]

[tool.poetry.dependencies]
python = "^3.9"
matrix-nio = {extras = ["e2e"], version = "^0.18.7"}
loguru = "^0.5.3"
click = "^8.0.3"
Markdown = "^3.3.6"
aiohttp = "^3.8.1"
zmq = "^0.0.0"
requests = "^2.27.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
flake8 = "^4.0.1"

[tool.poetry.scripts]
notflixbot = "notflixbot.main:main"
bullit = "notflixbot.bullit:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
