[tool.poetry]
name = "notflixbot"
version = "0.2.1"
description = ""
authors = ["Benedikt Kristinsson <benedikt@lokun.is>"]
readme = "README.md"
repository = "https://git.sudo.is/ben/notflixbot"

[tool.poetry.dependencies]
python = "^3.9"
matrix-nio = {extras = ["e2e"], version = "^0.18.7"}
loguru = "^0.5.3"
click = "^8.0.3"
Markdown = "^3.3.6"
aiohttp = "^3.8.1"
zmq = "^0.0.0"
requests = "^2.27.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
flake8 = "^4.0.1"
isort = "^5.10.1"
black = "^22.1.0"
autopep8 = "^1.6.0"

[tool.poetry.scripts]
notflixbot = "notflixbot.main:main"

[tool.poetry.group.dev.dependencies]
poetry-bumpversion = "^0.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry_bumpversion.file."notflixbot/__init__.py"]

[tool.isort]
skip = [".gitignore", ".dockerignore", ".git", "tests"]
extend_skip = [".md", ".json", ".toml"]
multi_line_output = 9
profile = "black"
line_length = 79
quiet = true

[tool.black]
line-length = 80
target-version = ["py39"]
exclude = ["tests"]