[tool.poetry]
name = "notflixbot"
version = "0.3.0"
description = ""
authors = ["Benedikt Kristinsson <benedikt@lokun.is>"]
readme = "README.md"
repository = "https://git.sudo.is/ben/notflixbot"

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
matrix-nio = {extras = ["e2e"], version = "^0.25.2"}
loguru = "^0.7.3"
click = "^8"
Markdown = "^3.8"
aiohttp = "^3.11.18"
pyzmq = "^26.4.0"
requests = "^2.32.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
flake8 = "^4.0.1"
isort = "^5.10.1"
black = "^22.1.0"
autopep8 = "^1.6.0"

[tool.poetry.scripts]
notflixbot = "notflixbot.main:main"

[tool.poetry.group.dev.dependencies]
poetry-bumpversion = "^0.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry_bumpversion.file."notflixbot/__init__.py"]

[tool.poetry.requires-plugins]
poetry-plugin-export = ">=1.8"

[tool.isort]
skip = [".gitignore", ".dockerignore", ".git", "tests"]
extend_skip = [".md", ".json", ".toml"]
multi_line_output = 9
profile = "black"
line_length = 79
quiet = true

[tool.black]
line-length = 80
target-version = ["py39"]
exclude = ["tests"]
